<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vietnamese synthesis system</string>
    <string name="action_settings">Settings</string>
    <string name="log">Logcat</string>
    <string name="btn_speak">Speak</string>
    <string name="btn_play_audio">Play Audio</string>
    <string name="btn_clear">Clear</string>
    <string name="text_hint">Enter something to speak</string>

</resources>
